make sidebar operation icon align issue

--- a/src/stylesheets/components/_sidebar.scss
+++ b/src/stylesheets/components/_sidebar.scss
@@ -16,6 +16,7 @@
     float: right;
     padding: 0 5px 0 0;
     font-size: 16px;
+    line-height: 0;
     cursor: pointer
   }
 
